# HACKUPC_2026

./: CMakeLists.txt  README.md
data/: ceiling.csv  obstacles.csv  types_of_bays.csv  warehouse.csv
data/Case10/: ceiling.csv  obstacles.csv  types_of_bays.csv  warehouse.csv
data/Case4/: ceiling.csv  obstacles.csv  types_of_bays.csv  warehouse.csv
data/Case5/: ceiling.csv  types_of_bays.csv  warehouse.csv
data/Case6/: ceiling.csv  obstacles.csv  types_of_bays.csv
data/Case7/: ceiling.csv  obstacles.csv  types_of_bays.csv  warehouse.csv
data/Case8/: ceiling.csv  obstacles.csv  types_of_bays.csv  warehouse.csv
data/Case9/: ceiling.csv  obstacles.csv  types_of_bays.csv  warehouse.csv
src/: main.cpp
src/common/: Types.cpp  Types.hpp
src/data_input/: DataInput.cpp  DataInput.hpp
src/data_output/: SceneBuilder.cpp  SceneBuilder.hpp
src/optimization/: Optimizer.comp  Optimizer.cpp  Optimizer.hpp
src/visualization/: Camera.cpp  Camera.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp
